--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-simple-image-viewer": "^1.2.2",
     "swiper": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
